--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,13 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^22.5.5",
     "@types/cors": "^2.8.13",
+    "@types/node": "^22.5.5",
     "typescript": "^5.6.2"
   }
 }
